--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,80 +3,94 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
   workflow_dispatch:
     inputs:
       log_level:
-        description: 'Log level'
+        description: "Log level"
         required: true
-        default: 'warning'
+        default: "warning"
 
 jobs:
   build-macos-arm64:
     name: Build macOS arm64
-    runs-on: macos-14
+    runs-on: macos-15
     strategy:
       matrix:
-        architecture: ['arm64']
+        architecture: ["arm64"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Get latest aria2 version
+        id: get_version
+        run: |
+          LATEST_VERSION=$(curl -s https://api.github.com/repos/aria2/aria2/releases/latest | grep -oP '(?<="tag_name":\s")release-[^"]+' | sed 's/release-//')
+          echo "::set-output name=version::$LATEST_VERSION"
 
       - name: Build
         run: |
           brew install autoconf
           brew install automake
           brew install wget
-          wget https://github.com/aria2/aria2/releases/download/release-1.37.0/aria2-1.37.0.tar.gz
-          tar -zxf aria2-1.37.0.tar.gz
-          cd aria2-1.37.0
+          VERSION=${{ steps.get_version.outputs.version }}
+          wget https://github.com/aria2/aria2/releases/download/release-${VERSION}/aria2-${VERSION}.tar.gz
+          tar -zxf aria2-${VERSION}.tar.gz
+          cd aria2-${VERSION}
           cp ../makerelease-osx-v2.mk ./
           mkdir build-release
           cd build-release
           ln -s ../makerelease-osx-v2.mk Makefile
           make ARCH=${{ matrix.architecture }}
           cd aria2-def/bin
-          tar -zcf aria2c-macos-${{ matrix.architecture }}.tar.gz aria2c
-          cp aria2c-macos-${{ matrix.architecture }}.tar.gz ${{ github.workspace }}/
+          tar -zcf aria2c-macos-${VERSION}-${{ matrix.architecture }}.tar.gz aria2c
+          cp aria2c-macos-${VERSION}-${{ matrix.architecture }}.tar.gz ${{ github.workspace }}/
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: aria2c-macos-${{ matrix.architecture }}
-          path: aria2c-macos-${{ matrix.architecture }}.tar.gz
-          
+          name: aria2c-macos-${{ steps.get_version.outputs.version }}-${{ matrix.architecture }}
+          path: aria2c-macos-${{ steps.get_version.outputs.version }}-${{ matrix.architecture }}.tar.gz
+
   build-macos-x86_64:
     name: Build macOS x86_64
     runs-on: macos-13
     strategy:
       matrix:
-        architecture: ['x86_64']
+        architecture: ["x86_64"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Get latest aria2 version
+        id: get_version
+        run: |
+          LATEST_VERSION=$(curl -s https://api.github.com/repos/aria2/aria2/releases/latest | grep -o '(?<="tag_name":\s")release-[^"]+' | sed 's/release-//')
+          echo "::set-output name=version::$LATEST_VERSION"
 
       - name: Build
         run: |
           brew install autoconf
           brew install automake
           brew install wget
-          wget https://github.com/aria2/aria2/releases/download/release-1.37.0/aria2-1.37.0.tar.gz
-          tar -zxf aria2-1.37.0.tar.gz
-          cd aria2-1.37.0
+          VERSION=${{ steps.get_version.outputs.version }}
+          wget https://github.com/aria2/aria2/releases/download/release-${VERSION}/aria2-${VERSION}.tar.gz
+          tar -zxf aria2-${VERSION}.tar.gz
+          cd aria2-${VERSION}
           cp ../makerelease-osx-v2.mk ./
           mkdir build-release
           cd build-release
           ln -s ../makerelease-osx-v2.mk Makefile
           make ARCH=${{ matrix.architecture }}
           cd aria2-def/bin
-          tar -zcf aria2c-macos-${{ matrix.architecture }}.tar.gz aria2c
-          cp aria2c-macos-${{ matrix.architecture }}.tar.gz ${{ github.workspace }}/
+          tar -zcf aria2c-macos-${VERSION}-${{ matrix.architecture }}.tar.gz aria2c
+          cp aria2c-macos-${VERSION}-${{ matrix.architecture }}.tar.gz ${{ github.workspace }}/
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: aria2c-macos-${{ matrix.architecture }}
-          path: aria2c-macos-${{ matrix.architecture }}.tar.gz
+          name: aria2c-macos-${{ steps.get_version.outputs.version }}-${{ matrix.architecture }}
+          path: aria2c-macos-${{ steps.get_version.outputs.version }}-${{ matrix.architecture }}.tar.gz
 
   release:
     needs: [build-macos-arm64, build-macos-x86_64]
@@ -84,6 +98,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Get latest aria2 version
+        id: get_version
+        run: |
+          LATEST_VERSION=$(curl -s https://api.github.com/repos/aria2/aria2/releases/latest | grep -oP '(?<="tag_name":\s")release-[^"]+' | sed 's/release-//')
+          echo "::set-output name=version::$LATEST_VERSION"
 
       - name: Download artifacts
         uses: actions/download-artifact@v2
@@ -96,18 +116,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: v${{ steps.get_version.outputs.version }}
+          release_name: Release v${{ steps.get_version.outputs.version }}
           draft: false
           prerelease: false
 
       - name: Upload Release Assets
         run: |
+          VERSION=${{ steps.get_version.outputs.version }}
           for file in ./artifacts/aria2c-*/*; do
             if [ -f "$file" ]; then
               asset_name=$(basename $file)
               echo "Uploading asset: $asset_name"
-              gh release upload ${GITHUB_REF#refs/tags/} "$file" --repo ${{ github.repository }}
+              gh release upload v${VERSION} "$file" --repo ${{ github.repository }}
             fi
           done
         env:
